HomeController, SubFormModel and XmlSerialzation made.

--- a/Axkri10_Draw/Axkri10_Draw/Views/Home/Index.cshtml
+++ b/Axkri10_Draw/Axkri10_Draw/Views/Home/Index.cshtml
@@ -1,31 +1,56 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model Axkri10_Draw.Models.SubFormModel
+
+<h2>Submission form</h2>
+
+<h3> Fill out to enter the draw</h3>
+
+@using (Html.BeginForm("Index", "Home", FormMethod.Post))
+{
+    <table cellpadding="0" cellspacing="0">
+        <tr>
+            <th colspan="2" align="center">Person Details</th>
+        </tr>
+        <tr>
+            <td>First Name: </td>
+            <td>
+                @Html.TextBoxFor(m => m.FirstName)
+            </td>
+        </tr>
+        <tr>
+            <td>Sur Name: </td>
+            <td>
+                @Html.TextBoxFor(m => m.SurName)
+            </td>
+        </tr>
+        <tr>
+            <td>Email address: </td>
+            <td>
+                @Html.TextBoxFor(m => m.Email)
+            </td>
+        </tr>
+        <tr>
+            <td>Phonenumber: </td>
+            <td>
+                @Html.TextBoxFor(m => m.PhoneNumber)
+            </td>
+        </tr>
+        <tr>
+            <td>Date of birth: </td>
+            <td>
+                @Html.TextBoxFor(m => m.Birthday)
+            </td>
+        </tr>
+        <tr>
+            <td>Serial number: </td>
+            <td>
+                @Html.TextBoxFor(m => m.SerialNo)
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit" value="Submit" /></td>
+        </tr>
+    </table>
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<br />
+Your submitted details = @ViewBag.Demo
