--- a/Axkri10_Draw/Axkri10_Draw/Views/Home/About.cshtml
+++ b/Axkri10_Draw/Axkri10_Draw/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
-﻿@{
+﻿@model Axkri10_Draw.Models.SubFormModel
+@{
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+
+Submissions = @ViewBag.Display
