--- a/Axkri10_Draw/Axkri10_Draw/Views/Home/SubmissionList.cshtml
+++ b/Axkri10_Draw/Axkri10_Draw/Views/Home/SubmissionList.cshtml
@@ -1,5 +1,9 @@
-﻿@{
+﻿@model Axkri10_Draw.Models.SubFormModel
+
+@{
     ViewBag.Title = "See submissions";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
+
+Submissions = @ViewBag.Display
